--- a/app/views/cce_reports/_student_report.html.erb
+++ b/app/views/cce_reports/_student_report.html.erb
@@ -24,68 +24,81 @@
     Scholastic Areas
   </div>
   <table id="listing" width="100%">
-    <tr class="tr-head">
-      <td>Sl no</td>
-      <td></td>
-      <% @exam_groups.each do |eg| %>
-        <td colspan="4"><%= eg.cce_exam_category.name %></td>
-      <% end %>
-      <td colspan="4">Overall</td>
-    </tr>
-    <tr class="tr-head">
-      <td></td>
-      <td>Subjects</td>
-      <% @exam_groups.each do |eg| %>
-        <td>FA1</td>
-        <td>FA2</td>
-        <td>SA1</td>
-        <td>FA1+ FA2+ SA1</td>
-      <% end %>
-      <td>FA1+ FA2+ FA3+ FA4</td>
-      <td>SA1+ SA2</td>
-      <td>Overall</td>
-      <td>Grade Point</td>
-    </tr>
-    <% @subjects.each_with_index do |s,i| %>
-      <tr class="center tr-<%= cycle('odd', 'even') %>">
-        <td><%= i+1 %></td>
-        <td class="left-aligned"><%= s.name %></td>
-        <% sub=scholastic.find{|c| c.subject_id==s.id} %>
-        <% @exam_groups.each do |eg|
-          se=sub.exams.find{|g| g.exam_group_id==eg.id} if sub %>
-          <% if se %>
-            <td><%= se.fa[se.fa_group_ids[0]] if se.fa_group_ids[0] %></td>
-            <td><%= se.fa[se.fa_group_ids[1]] if se.fa_group_ids[1] %></td>
-            <td><%= se.sa %></td>
-            <td><%= se.overall %></td>
-          <% else %>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          <% end %>
+    <% if @exam_groups.empty? %>
+      <tr class="tr-head">
+        <td>No Exams </td></tr>
+    <% else %>
+      <tr class="tr-head">
+        <td>Sl no</td>
+        <td></td>
+        <% @exam_groups.each do |eg| %>
+          <td colspan="4"><%= eg.cce_exam_category.name %></td>
         <% end %>
-        <% if sub %>
-          <td><%= sub.fa %></td>
-          <td><%= sub.sa %></td>
-          <td><%= sub.overall %></td>
-          <td><%= sub.grade_point %></td>
-          <% if s.elective_group_id.blank? %>
-            <% cgpa += sub.grade_point.to_f %>
-            <% count += 1 %>
-          <% end %>
-        <% else %>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
+        <% if @exam_groups.count==2 %>
+          <td colspan="4">Overall</td>
         <% end %>
       </tr>
+      <tr class="tr-head">
+        <td></td>
+        <td>Subjects</td>
+        <% @exam_groups.each_with_index do |eg,i| %>
+          <td><%= "FA#{2*i+1}" %></td>
+          <td><%= "FA#{2*i+2}" %></td>
+          <td><%= "SA#{i+1}" %></td>
+          <td><%= "FA#{2*i+1}+ FA#{2*i+2}+ SA#{i+1}" %></td>
+        <% end %>
+        <% if @exam_groups.count==2 %>
+          <td>FA1+ FA2+ FA3+ FA4</td>
+          <td>SA1+ SA2</td>
+          <td>Overall</td>
+          <td>Grade Point</td>
+        <% end %>
+      </tr>
+      <% @subjects.each_with_index do |s,i| %>
+        <tr class="center tr-<%= cycle('odd', 'even') %>">
+          <td><%= i+1 %></td>
+          <td class="left-aligned"><%= s.name %></td>
+          <% sub=scholastic.find{|c| c.subject_id==s.id} %>
+          <% @exam_groups.each do |eg|
+            se=sub.exams.find{|g| g.exam_group_id==eg.id} if sub %>
+            <% if se %>
+              <td><%= se.fa[se.fa_group_ids[0]] if se.fa_group_ids[0] %></td>
+              <td><%= se.fa[se.fa_group_ids[1]] if se.fa_group_ids[1] %></td>
+              <td><%= se.sa %></td>
+              <td><%= se.overall %></td>
+            <% else %>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+            <% end %>
+          <% end %>
+          <% if @exam_groups.count==2 %>
+            <% if sub %>
+              <td><%= sub.fa %></td>
+              <td><%= sub.sa %></td>
+              <td><%= sub.overall %></td>
+              <td><%= sub.grade_point %></td>
+              <% if s.elective_group_id.blank? %>
+                <% cgpa += sub.grade_point.to_f %>
+                <% count += 1 %>
+              <% end %>
+            <% else %>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+            <% end %>
+          <% end %>
+        </tr>
+      <% end %>
     <% end %>
   </table>
-  <div class="custom_header">
-    <span class="cgpa">Cumulative Grade Point Average(CGPA)  :   <%= cgpa/count unless count==0 %></span>
-  </div>
+  <% if @exam_groups.count==2 %>
+    <div class="custom_header">
+      <span class="cgpa">Cumulative Grade Point Average(CGPA)  :   <%= cgpa/count unless count==0 %></span>
+    </div>
+  <% end %>
 </div>
 <% @co_hashi.keys.sort.each do |kind| %>
   <div class="custom_header">
