fixed style issue in transcript pdf and combined report pdf [fixed #3218]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3300 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/exam/student_combined_report_pdf.css
+++ b/public/stylesheets/exam/student_combined_report_pdf.css
@@ -101,7 +101,7 @@ table#pdf-table{
     border: 1px solid #ADACAB;
     border-collapse:collapse
 }
-.header-content{
+/*.header-content{
     color: #97080e;
     font-weight: bold;
     font-size: 25px;
@@ -109,7 +109,7 @@ table#pdf-table{
     width: 800px;
     height: 110px;
     text-align: center;
-}
+}*/
 
 .header-content p{
     margin-top: 3px;
