removed is_final_exam checking from exam creation page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3301 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/_exam_marks_form.erb
+++ b/app/views/exam/_exam_marks_form.erb
@@ -43,12 +43,12 @@
       <%= f.label :minimum_marks, t('min_mark') %>
       <div class="text-input-bg"> <%= f.text_field :minimum_marks %></div>
     </div>
-    <% if @batch.grading_type=="1" %>
-      <div class="label-field-pair">
-        <%= f.label :is_final_exam, t('is_final_exam') %>
-        <div class="text-input-bg"> <%= f.check_box :is_final_exam %></div>
-      </div>
-    <% end %>
+    <%# if @batch.grading_type=="1" %>
+      <%#*<div class="label-field-pair">%>
+        <%#= f.label :is_final_exam, t('is_final_exam') %>
+        <%#*<div class="text-input-bg"> <%= f.check_box :is_final_exam %>
+      <%#*</div>%>
+    <%# end %>
 
   </div>
   <h4> <%= t('enter_exam_related_details') %>:</h4>
