use credit points in examintion grading levels instead of cce in fa score entry
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3302 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/assessment_scores/_fa_sheet.erb
+++ b/app/views/assessment_scores/_fa_sheet.erb
@@ -27,7 +27,7 @@
                     <%= di.name %>
                   </td>
                   <td class="score">
-                    <%= select_tag "grade[#{di.id}]",options_for_select([["",""]]+@grading_levels.map{|m| [m.name,m.grade_point.to_i]},(@scores[@student.id][di.id].present? ? @scores[@student.id][di.id].first.grade_points : "")) %>
+                    <%= select_tag "grade[#{di.id}]",options_for_select([["",""]]+@grading_levels.map{|m| [m.name,m.credit_points.to_f]},(@scores[@student.id][di.id].present? ? @scores[@student.id][di.id].first.grade_points : "")) %>
                   </td>
                 </tr>
               <% end %>
