fa to take grading levels from fedena grading_levels, check in cce_report generate for complete credit_points
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3305 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/create_reports.html.erb
+++ b/app/views/cce_reports/create_reports.html.erb
@@ -32,6 +32,16 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <% unless flash[:error].blank? %>
+    <div class="errorExplanation" id="errorExplanation">
+      <p>There where some problems</p>
+      <ul>
+        <% flash[:error].each do |error| %>
+          <li><%= error %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="box">
     <% form_for :course, :url=>{:action=>:create_reports} do |f|  %>
       <div class="label-field-pair">
@@ -52,6 +62,6 @@
 
       <div id="update_batch" ></div>
       <%= submit_tag "", :value => "► #{t('create_text')}", :class => "submit-button" %>
-      <% end %>
-      <div class="extender"></div>
-    </div></div>
+    <% end %>
+    <div class="extender"></div>
+  </div></div>
