remove associations for cce_grade_Set and fa_group, removed from creation fa_group creation forms as well.
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3306 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/fa_groups/_edit.erb
+++ b/app/views/fa_groups/_edit.erb
@@ -21,12 +21,12 @@
           <%= f.select :cce_exam_category_id ,@exam_categories.map{|m| [m.name,m.id]} ,:prompt=>"Select an exam category" %>
         </div>
       </div>
-      <div class="label-field-pair">
-        <label for="category_name">CCE Grade Set</label>
-        <div class="text-input-bg">
-          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a grade set" %>
-        </div>
-      </div>
+      <%#*<div class="label-field-pair">%>
+        <%#*<label for="category_name">CCE Grade Set</label>%>
+        <%#*<div class="text-input-bg">%>
+          <%#= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a grade set" %>
+        <%#*</div>%>
+      <%#*</div>%>
 
       <%= f.submit "", :value => "► Update", :class => "submit_button" %>
     <% end %>
