--- a/app/views/fa_groups/_new.erb
+++ b/app/views/fa_groups/_new.erb
@@ -21,12 +21,12 @@
          <%= f.select :cce_exam_category_id ,@exam_categories.map{|m| [m.name,m.id]} ,:prompt=>"Select an Exam Category" %>
         </div>
       </div>
-      <div class="label-field-pair">
-        <label for="category_name">CCE Grade Set</label>
-        <div class="text-input-bg">
-          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a Grade Set" %>
-        </div>
-      </div>
+      <%#*<div class="label-field-pair">%>
+        <%#*<label for="category_name">CCE Grade Set</label>%>
+        <%#*<div class="text-input-bg">%>
+          <%#= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a Grade Set" %>
+        <%#*</div>%>
+      <%#*</div>%>
       <%= f.submit "", :value => "► Create", :class => "submit_button" %>
     <% end %>
   </div>
