--- a/app/views/exam/generated_report2_pdf.erb
+++ b/app/views/exam/generated_report2_pdf.erb
@@ -31,62 +31,69 @@
       <% c = 'even' %>
       <table id="pdf-table" width="100%" cellspacing="0">
         <tr class="table-header">
-        <td><%= t('name') %></td>
-        <% @exam_groups.each do |exam_group| %>
-          <td><%= exam_group.name %></td>
-        <% end %>
-      </tr>
-      <% i = 0 %>
-      <% @students.each do |student| %>
-      <% if i== 22 %>
+          <td><%= t('name') %></td>
+          <% @exam_groups.each do |exam_group| %>
+            <td><%= exam_group.name %></td>
+          <% end %>
+        </tr>
+        <% i = 0 %>
+        <% @students.each do |student| %>
+          <% if i== 22 %>
             <% i= 0 %>
             <tr class="page-break"><td colspan="3"></td></tr>
 
-                <tr class="table-header">
-        <td><%= t('name') %></td>
-        <% @exam_groups.each do |exam_group| %>
-          <td><%= exam_group.name %></td>
-        <% end %>
-      </tr>
+            <tr class="table-header">
+              <td><%= t('name') %></td>
+              <% @exam_groups.each do |exam_group| %>
+                <td><%= exam_group.name %></td>
+              <% end %>
+            </tr>
 
           <% end %>
-        <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-          <td class="col-pdf"><%= student.full_name %></td>
-          <% @exam_groups.each do |exam_group| %>
-            <td class="col-pdf">
-              <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
-              <% exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
-              <% unless exam.nil? %>
-                <% if exam_group.exam_type == 'Marks' %>
-                  <%= exam_score.nil? ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
-                <% elsif exam_group.exam_type == 'Grades'%>
-                  <%= exam_score.nil? ? '-' : (exam_score.grading_level || '-') %>
-                <% else %>
-                  <%= exam_score.nil? ? '-' :  "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
-                <% end %>
-              <% else %>
-                <%= "#{t('n_a')}" %>
-              <% end %>
-            </td>
+          <% is_valid_subject=1 %>
+          <% unless @subject.elective_group_id.nil? %>
+            <% is_student_elective = StudentsSubject.find_by_student_id_and_subject_id(student.id,@subject.id) %>
+            <% is_valid_subject = 0 if is_student_elective.nil? %>
           <% end %>
-        </tr>
-        <% i+=1 %>
-      <% end %>
-      <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-        <td class="col-pdf-bold">
-          <%= t('class_average') %>
-        </td>
-        <% @exam_groups.each do |exam_group| %>
-          <% if exam_group.exam_type == 'Marks' or exam_group.exam_type == 'MarksAndGrades' %>
-            <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
-            <td class="col-pdf-bold">
-              <%="%.2f"%exam_group.subject_wise_batch_average_marks(@subject.id) unless exam.nil?%>
-            </td>
-          <% else %>
-            <td class="col-pdf-bold">-</td>
+          <% unless is_valid_subject == 0 %>
+            <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
+              <td class="col-pdf"><%= student.full_name %></td>
+              <% @exam_groups.each do |exam_group| %>
+                <td class="col-pdf">
+                  <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
+                  <% exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
+                  <% unless exam.nil? %>
+                    <% if exam_group.exam_type == 'Marks' %>
+                      <%= exam_score.nil? ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
+                    <% elsif exam_group.exam_type == 'Grades'%>
+                      <%= exam_score.nil? ? '-' : (exam_score.grading_level || '-') %>
+                    <% else %>
+                      <%= exam_score.nil? ? '-' :  "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
+                    <% end %>
+                  <% else %>
+                    <%= "#{t('n_a')}" %>
+                  <% end %>
+                </td>
+              <% end %>
+            </tr>
+            <% i+=1 %>
           <% end %>
         <% end %>
-      </tr>
+        <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
+          <td class="col-pdf-bold">
+            <%= t('class_average') %>
+          </td>
+          <% @exam_groups.each do |exam_group| %>
+            <% if exam_group.exam_type == 'Marks' or exam_group.exam_type == 'MarksAndGrades' %>
+              <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
+              <td class="col-pdf-bold">
+                <%="%.2f"%exam_group.subject_wise_batch_average_marks(@subject.id) unless exam.nil?%>
+              </td>
+            <% else %>
+              <td class="col-pdf-bold">-</td>
+            <% end %>
+          <% end %>
+        </tr>
       </table>
     </div>
   </div>
