--- a/public/stylesheets/exam/student_subject_rank_pdf.css
+++ b/public/stylesheets/exam/student_subject_rank_pdf.css
@@ -1,21 +1,29 @@
-
-
 #page-yield {
-    width:-moz-max-content;
+    width:800px;
     margin: 0 auto;
-    float: left;
+
     overflow: hidden;
 }
-
-#pdf-info{
-    padding-top: 50px;
+.info1{
+    margin-top:-10px;
+    width:800px;
+    float:left;
 }
-
-
+.info-left{
+    float:left;
+}
+.info-right{
+    float:right;
+}
+.tr-blank{
+    height:  27px;
+}
 .hor_line{
-    width:-moz-max-content;
+    width:800px;
     background: #333333;
     height: 1px;
+    margin-top:-10px;
+    float:left;
 }
 
 h2.heading{
@@ -23,17 +31,20 @@ h2.heading{
     margin:5px;
 }
 
-#main_info h4{
-    color: #555555;
-    margin-top: 18px;
-    font-weight: normal;
-}
 
 #main_info h2{
     margin-bottom: 2px;
     font-weight: normal;
 
 }
+
+#main_info h4{
+    color: #555555;
+    margin-top: 18px;
+    font-weight: bold;
+}
+
+
 
 
 .odd{
@@ -59,76 +70,79 @@ tr.odd{
 
 .even td{
 
-    padding: 12px 12px 12px 15px;
+    padding: 12px 15px 12px 12px;
     border: 1px solid #ADACAB;
-    border-right: 0px solid #fff;
+    border-left: 0px solid #fff;
     border-top: 0px solid #fff;
 
 }
 
 .odd td{
-    padding: 12px 12px 12px 15px;
+    padding: 12px 15px 12px 12px;
     border: 1px solid #ADACAB;
-    border-right: 0px solid #fff;
+    border-left: 0px solid #fff;
     border-top: 0px solid #fff;
 
 }
 
-td.col-pdf-bold{
-    font-weight: bold !important;
-}
-
 .table-header td{
-    padding: 12px 12px 12px 15px;
+    padding: 12px 15px 12px 12px;
     border-top: 1px solid #ADACAB;
-    border-left: 1px solid #ADACAB;
     border-right: 1px solid #ADACAB;
+    border-left: 1px solid #ADACAB;
     color: #97080e;
     background: #EEEEEE;
 }
-
+#pdf-info{
+    float:left;
+    width:800px;
+}
 table#pdf-table{
-    border-top: 1px solid #ADACAB;
+    border: 1px solid #ADACAB;
     border-collapse:collapse
 }
+/*.header-content{
+    color: #97080e;
+    font-weight: bold;
+    font-size: 25px;
+    float: left;
+    width: 800px;
+    height: 110px;
+    text-align: center;
+}*/
 
-
-#page-extender{
-    width:100%;
-    height :300px;
-
-}
-#page-extender1{
-    width:100%;
-    height :500px;
-
-}
-
-.report{
-    min-height: 1000px;
-    margin: 0 auto;
+.header-content p{
+    margin-top: 3px;
+    margin-bottom: 2px;
 }
 
-#signature{
+.notes{
+    float:right;
+    width:750px;
+    font-size:15px;
+}
+.note{
+    float:left;
+    width:40px;
+    font-size:15px;
+    height:60px;
+}
+.note_text{
+    float:left;
+    margin-bottom:7px;
+}
+#pdf-footer{
     text-align: right;
-    width: 700px;
+    width: 1400px;
+    padding-right: 100px;
+    padding: 50px;
     margin: 0 auto;
     color: #999999;
     font-size: 18px;
+
 }
-
-
-#page-yield h2{
-    text-align: center;
-}
-
-
 .page-break td{
-    height: 450px;
+    height: 240px;
     border: 1px solid #fff;
     border-bottom: 1px solid #ADACAB;
 }
-
-
-
-
