change link name as co scholastic result entry from co scholastic mark entry
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3314 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam_groups/index.html.erb
+++ b/app/views/exam_groups/index.html.erb
@@ -110,7 +110,7 @@
       <% if @batch.cce_enabled? %>
         <% if permitted_to? :observation_groups,  :assessment_scores %>
           <tr class="tr-<%= cycle('odd', 'even') %>">
-            <td colspan="2" class="col-1"><%= link_to t("co_scholastic_mark_entry"), observation_groups_assessment_scores_path(:batch_id=>@batch.id) %></td>
+            <td colspan="2" class="col-1"><%= link_to "Co-Scholastic result entry", observation_groups_assessment_scores_path(:batch_id=>@batch.id) %></td>
           </tr>
         <% end %>
       <% end %>
