=[FIXES BUG #3199] - Edit observation group, incorrect grade set shown
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3318 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/observation_groups/_edit.erb
+++ b/app/views/observation_groups/_edit.erb
@@ -18,7 +18,7 @@
       <div class="label-field-pair">
         <label for="category_name">CCE Grade Set</label>
         <div class="text-input-bg">
-          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a grade set" %>
+          <%= select_tag "obs_group[cce_grade_set_id]",options_for_select(@grade_sets.map{|m| [m.name,m.id]},@obs_group.try(:cce_grade_set_id).to_i) %>
         </div>
       </div>
       <div class="label-field-pair">
