--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -4,17 +4,41 @@
   <% if permitted_to? :index, :student %>
     <li class="a"><%= link_to t('students'), :controller => "student", :action => "index" %></li>
   <% end %>
-  <% if permitted_to? :index, :attendance_reports or permitted_to? :index, :attendances %>
+  <% if @current_user.admin? %>
     <li class="a"><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
       <ul class="level-1">
-        <% if permitted_to? :index, :attendances %>
-          <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
-        <% end %>
-        <% if permitted_to? :index, :attendance_reports or permitted_to? :index, :attendances%>
-          <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
-        <% end %>
+        <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
+        <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
       </ul>
     </li>
+  <% elsif @current_user.employee? %>
+    <% @employee= @current_user.employee_record  %>
+    <% @employee_subjects= @employee.subject_ids  %>
+    <% @employee_batches=Batch.find_all_by_employee_id(@employee.id) %>
+    <% @attendance_type = Configuration.find_by_config_key('StudentAttendanceType') %>
+    <% if @attendance_type.config_value == 'Daily' %>
+      <% if permitted_to? :index, :student_attendance or @employee_batches.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+        <li class="a"><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
+          <ul class="level-1">
+            <% if @employee_batches.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+              <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
+            <% end %>
+            <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
+          </ul>
+        </li>
+      <% end %>
+    <% else %>
+      <% if permitted_to? :index, :student_attendance or @employee_batches.present?or @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+        <li class="a"><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
+          <ul class="level-1">
+            <% if @employee_batches.present? or @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+              <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
+            <% end %>
+            <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
+          </ul>
+        </li>
+      <% end %>
+    <% end %>
   <% end %>
   <% if permitted_to? :index, :configuration %>
     <li class="a"><%= link_to "#{t('settings')} ▼", :controller => "configuration", :action => "index" %>
