cce reports link in main menu
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3332 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -134,6 +134,9 @@
             <% elsif (@current_user.privileges.collect(&:name).include?('ViewResults') or (Batch.all.collect(&:employee_id).include?(@current_user.employee_record.id.to_s) if @current_user.employee?)) %>
               <li><%= link_to "Report Center" , :controller => "exam",:action=>'report_center' %></li>
             <% end %>
+            <%  if permitted_to? :index, :cce_reports  %>
+              <li><%= link_to "CCE Report" , :controller => "cce_reports" %>  </li>
+            <% end %>
             <% FedenaPlugin::ADDITIONAL_LINKS[:online_exam_index_link].each do |mod| %>
               <%  if permitted_to? "#{mod[:destination][:action]}".to_sym,"#{mod[:destination][:controller]}".to_sym %>
                 <li><%= link_to "#{t("#{mod[:title]}")}",mod[:destination] %></li>
