user auth for cce
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3339 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/student_wise_report.html.erb
+++ b/app/views/cce_reports/student_wise_report.html.erb
@@ -30,10 +30,11 @@
   </ul>
 </div>
 <div id="page-yield">
-
-  <% unless flash[:notice].nil? %>
-    <p class="flash-msg"> <%= flash[:notice] %> </p>
-  <% end %>
+  <div id="hider">
+    <% unless flash[:notice].nil? %>
+      <p id="flash-msg"class="flash-msg"> <%= flash[:notice] %> </p>
+    <% end %>
+  </div>
   <div class="label-field-pair">
     <label for="batch_id"><%= t('select_a_batch') %></label>
     <%= image_tag("loader.gif",
