--- a/app/views/finance/_fee_collection_batchs.html.erb
+++ b/app/views/finance/_fee_collection_batchs.html.erb
@@ -14,15 +14,26 @@
 #KIND, either express or implied.  See the License for the
 #specific language governing permissions and limitations
 #under the License. -%>
-<div class="label-field-pair"><label> <%= t('select_batch') %>: </label></div>
-<div class="fee_category_scroll">
-  <div class="sel-list">
-    <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-    <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
-  </div>
-  <% @fee_category.each do |f| %>
-    <div class="each_batch">
-      <%= check_box_tag "fee_collection[category_ids][]", f.id,true,:class=>'batches_box' %> <%= f.batch.full_name %>
+
+<% unless @fee_category.blank? %>
+  <div class="batch_select_box">
+    <div class="label-field-pair">
+      <label> <%= t('select_batch') %>:
+        <b class="sel-list">
+          <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+          <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+        </b>
+      </label>
     </div>
-  <% end %>
-</div>
+    <div class="fee_category_scroll">
+      <% @fee_category.each do |f| %>
+        <div class="each_batch">
+          <%= check_box_tag "fee_collection[category_ids][]", f.id, true, :class=>'batches_box' %> <%= f.batch.full_name %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+<% else %>
+  <p class="flash-msg"> <%= t('finance.flash28') %> </p>
+<% end %>
