--- a/app/views/finance/_fee_particulars_create_form.html.erb
+++ b/app/views/finance/_fee_particulars_create_form.html.erb
@@ -22,22 +22,11 @@
 
 <div id="grading-levels-form">
 
-  <% form_remote_for  :finance_fee_particular,:url =>{:action => 'fees_particulars_create'}  do |f| %>
+  <% form_remote_for  :finance_fee_particular,:url =>{:action => 'fees_particulars_create2'}  do |f| %>
 
     <div id="form-errors"></div>
-    <div class="label-field-pair">
-      <div class="label-container"><label><%= t('select_a_category') %> :</label></div>
-      <div class="categories">
-        <div class="sel-list">
-          <%= t('select') %>: <%= link_to_function t('all'), "$$('input.MB_focusable').each(function(checkbox) { checkbox.checked = true; });" %>,
-          <%= link_to_function t('none'), "$$('input.MB_focusable').each(function(checkbox) { checkbox.checked = false; });" %>
-        </div>
-        <% @fees_categories.each do |c| %>
-          <div class="each_category">
-            <%= check_box_tag "finance_fee_particular[finance_fee_category_ids][]", c.id %> <label><%= "#{c.name} - #{c.batch.full_name}" %></label>
-          </div>
-        <% end %></div>
-    </div>
+    <%= hidden_field_tag "finance_fee_particular[finance_fee_category_ids][]", @fees_category.id %>
+    <%= hidden_field_tag "category_selected", '1' %>
 
     <div class="label-field-pair">
       <div class="label-container"> <%= f.label "#{t('name')}"  %></div>
