--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -22,8 +22,8 @@
 
 <% unless flash[:warning].nil? %><p class="flash-msg"><%= flash[:warning] %></p><% end %>
 
-<%if @financefee.transaction_id.nil? and @fine.nil?%>
-  <%= render :partial => "student_fine_submission" %>
+<% unless @financefee.is_paid %>
+  <%= render :partial => "student_fine_submission" if @fine.nil? %>
 <% end %>
 
 <div class="extender"></div>
@@ -95,33 +95,35 @@
           <td class="col-6" ><%= total_fees %></td>
         </tr>
 
-        <tr class="tr-blank"></tr>
-        <tr class="tr-blank"></tr>
 
       <% end %>
 
-
+      <tr class="tr-blank"></tr>
+      <tr class="tr-blank"></tr>
 
       <% unless @fine.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><span><%= t('fine') %> </span></td>
+          <td class="col-2"><span><%= t('fine_on') %> <%= Date.today %></span></td>
           <td class="col-6"><%= @fine.to_f %></td>
         </tr>
         <% total_fees += @fine.to_f %>
       <% end %>
       <% unless @financefee.transaction_id.nil? %>
 
-        <% @trans = FinanceTransaction.find(@financefee.transaction_id) %>
-        <% unless @trans.nil? %>
-          <% if @trans.fine_included %>
-            <tr class="tr-<%= cycle("odd","even") %>">
-              <td class="col-1"><%#= @fee_particulars.size+@paid_fees.size+1 %></td>
-              <td class="col-2"><span><%= t('fine') %></span></td>
-              <td class="col-6"><%= @trans.fine_amount %></td>
-            </tr>
+        <% @transactions = FinanceTransaction.all(:conditions=>"id IN (#{@financefee.transaction_id})") %>
+
+        <% unless @transactions.blank? %>
+          <% @transactions.each do |trans| %>
+            <% if trans.fine_included %>
+              <tr class="tr-<%= cycle("odd","even") %>">
+                <td class="col-1"><%= i+=1 %></td>
+                <td class="col-2"><span><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
+                <td class="col-6"><%= trans.fine_amount %></td>
+              </tr>
+              <% total_fees += trans.fine_amount.to_f %>
+            <% end %>
           <% end %>
-          <% total_fees += @trans.fine_amount.to_f %>
         <% end %>
       <% end %>
       <% unless @paid_fees.nil? %>
