--- a/app/views/finance/_student_fees_submission.html.erb
+++ b/app/views/finance/_student_fees_submission.html.erb
@@ -29,8 +29,8 @@
 
 <br />
 <%= error_messages_for "financefee" ,:header_message => nil%>
-<%if @fine.nil?%>
-  <%= render :partial => "fine_submission" %>
+<% unless @financefee.is_paid %>
+  <%= render :partial => "fine_submission" if @fine.nil? %>
 <% end %>
 <div id="register">
   <div class="header">
@@ -122,7 +122,7 @@
       <% unless @fine.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><span>1<%= t('fine') %> </span></td>
+          <td class="col-2"><span><%= t('fine_on') %> <%= Date.today %></span></td>
           <td class="col-6"><%= @fine.to_f %></td>
         </tr>
         <% unless @financefee.is_paid? == true %>
@@ -134,15 +134,18 @@
 
       <% unless @financefee.transaction_id.nil? %>
 
-        <% @trans = FinanceTransaction.find_by_id(@financefee.transaction_id) %>
-        <% unless @trans.nil? %>
-          <% if @trans.fine_included %>
-            <tr class="tr-<%= cycle("odd","even") %>">
-              <td class="col-1"><%= i+= 1 %></td>
-              <td class="col-2"><span><%= t('fine') %> </span></td>
-              <td class="col-6"><%= @trans.fine_amount %></td>
-            </tr>
-            <% total_fees += @trans.fine_amount.to_f %>
+        <% @transactions = FinanceTransaction.all(:conditions=>"id IN (#{@financefee.transaction_id})") %>
+
+        <% unless @transactions.blank? %>
+          <% @transactions.each do |trans| %>
+            <% if trans.fine_included %>
+              <tr class="tr-<%= cycle("odd","even") %>">
+                <td class="col-1"><%= i+=1 %></td>
+                <td class="col-2"><span><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
+                <td class="col-6"><%= trans.fine_amount %></td>
+              </tr>
+              <% total_fees += trans.fine_amount.to_f %>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
