--- a/app/views/finance/fees_index.html.erb
+++ b/app/views/finance/fees_index.html.erb
@@ -30,7 +30,7 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"><%= flash[:notice] %></p><% end %>
   <div class="box">
     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('create_fees')}  ", :action => "fees_create" %></div>
+      <div class="link-heading"><%= link_to "#{t('create_fees')}  ", :action => "master_fees" %></div>
       <div class="link-descr"><%= t('creates_master_fees_and_additional_fees') %></div>
     </div>
 
