auto width for inner tab menus fixes #3236
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3349 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -495,9 +495,9 @@ body > #content_wrapper {
     height : 1.5em;
     list-style-type : none;
     margin : 0 0 0 10px;
-    padding : 0;
+    padding : 0 10px !important;
     text-align : center;
-    width : 100px;
+    width : auto !important;
 }
 #inner-tab-menu ul li a {
     color : #fff;
