checks for associated courses in cce_weightages and observation_groups in cce_grade_set and prevents if any from deleting
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3354 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_grade_sets/index.html.erb
+++ b/app/views/cce_grade_sets/index.html.erb
@@ -33,6 +33,9 @@
   </ul>
 </div>
 <div id="page-yield">
+  <% unless flash[:warn_notice].nil? %>
+    <div id="errorExplanation" class="errorExplanation"><ul><li><%= flash[:warn_notice] %></li></ul> </div>
+  <% end %>
   <div id="flash-box">
     <% unless flash[:notice].nil? %>
       <p class="flash-msg"> <%= flash[:notice] %> </p>
