shows no courses assigned if assigned fd/sa groups are empty for fa/sa grade entry page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3355 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/assessment_scores/exam_fa_groups.html.erb
+++ b/app/views/assessment_scores/exam_fa_groups.html.erb
@@ -30,8 +30,6 @@
 </div>
 <div id="page-yield">
   <% unless @fa_groups.empty?  %>
-
-
     <ul id="category-list">
       <li class="listheading">
         <div class="heading-name">Select an FA</div>
@@ -49,5 +47,10 @@
       <% end %>
     </ul>
   <% else %>
+    <ul id="category-list">
+      <li class="listheading">
+        <div class="heading-name">No Scholastic items assigned to the batch.</div>
+      </li>
+    </ul>
   <% end %>
 </div>
