--- a/app/views/assessment_scores/observation_groups.html.erb
+++ b/app/views/assessment_scores/observation_groups.html.erb
@@ -49,5 +49,10 @@
       <% end %>
     </ul>
   <% else %>
+  <ul id="category-list">
+      <li class="listheading">
+        <div class="heading-name">No Co-Scholastic items assigned to the batch.</div>
+      </li>
+    </ul>
   <% end %>
 </div>
