--- a/app/views/fa_groups/_fa_criterias.erb
+++ b/app/views/fa_groups/_fa_criterias.erb
@@ -42,5 +42,7 @@
     </table>
   </div>
 <% else %>
-  No FA Criteria present.
+  <div id="flash-box">
+    <p class="flash-msg">No Scholastic assessment criterias  present</p>
+  </div>
 <% end %>
