--- a/app/views/observation_groups/_observations.erb
+++ b/app/views/observation_groups/_observations.erb
@@ -41,5 +41,7 @@
 
   </table>
 <% else %>
-  No Co-Scholastic criteria present.
+  <div id="flash-box">
+    <p class="flash-msg">No Co-Scholastic criterias present</p>
+  </div>
 <% end %>
