--- a/app/views/observation_groups/_observation_groups.erb
+++ b/app/views/observation_groups/_observation_groups.erb
@@ -1,27 +1,33 @@
-<div class="box">
-  <table align="center" width="100%" cellpadding="1" cellspacing="1">
-    <tr class="tr-head">
-      <td><%= t('observation_groups_text') %></td>
-      <td><%= t('desc') %></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <% @obs_groups.each do |c| %>
-      <tr class="tr-<%= cycle('odd', 'even') %>">
-        <td class="col-1">
-          <%= link_to c.name, observation_group_path(c) %>
-        </td>
-        <td class="col-2">
-          <%= link_to c.desc, observation_group_path(c) %>
-        </td>
-        <td class="col-3">
-          <div class="category-edit"><%= link_to_remote "#{t("edit_text")}", :url => { :action => 'edit', :id => c.id },:method=>:get %> | <%= link_to t("delete_text"),c,:method=>:delete,:confirm=>"Delete Co-Scholastic Group #{c.name}?" %></div>
-        </td>
+<% unless @obs_groups.empty? %>
+  <div class="box">
+    <table align="center" width="100%" cellpadding="1" cellspacing="1">
+      <tr class="tr-head">
+        <td><%= t('observation_groups_text') %></td>
+        <td><%= t('desc') %></td>
+        <td></td>
       </tr>
-    <% end %>
-  </table>
-</div>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <% @obs_groups.each do |c| %>
+        <tr class="tr-<%= cycle('odd', 'even') %>">
+          <td class="col-1">
+            <%= link_to c.name, observation_group_path(c) %>
+          </td>
+          <td class="col-2">
+            <%= link_to c.desc, observation_group_path(c) %>
+          </td>
+          <td class="col-3">
+            <div class="category-edit"><%= link_to_remote "#{t("edit_text")}", :url => { :action => 'edit', :id => c.id },:method=>:get %> | <%= link_to t("delete_text"),c,:method=>:delete,:confirm=>"Delete Co-Scholastic Group #{c.name}?" %></div>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+<% else %>
+  <div id="flash-box">
+    <p class="flash-msg">No Co-Scholastic items present</p>
+  </div>
+<% end %>
