style added for message when no contents are present for cce_grades
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3359 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_grade_sets/_grades.erb
+++ b/app/views/cce_grade_sets/_grades.erb
@@ -24,5 +24,7 @@
     <% end %>
   </table>
 <% else %>
-  No grades present.
+  <div id="flash-box">
+    <p class="flash-msg">No grades  present</p>
+  </div>
 <% end %>
