--- a/public/stylesheets/rtl/exam_reports/archived_batches_exam_report_pdf.css
+++ b/public/stylesheets/rtl/exam_reports/archived_batches_exam_report_pdf.css
@@ -1,6 +1,6 @@
 
 #page-yield {
-    width:800px;
+    width:1600px;
     margin: 0 auto;
     float: right;
     overflow: hidden;
@@ -9,7 +9,7 @@
 
 
 .hor_line{
-    width:800px;
+    width:1600px;
     background: #333333;
     height: 1px;
 }
@@ -70,7 +70,9 @@ tr.odd{
 
 }
 
-
+td.col-pdf-bold{
+    font-weight: bold !important;
+}
 
 .table-header td{
     padding: 12px 15px 12px 12px;
@@ -99,22 +101,16 @@ table#pdf-table{
 }
 
 .report{
-    min-height: 1250px;
-    margin: 0 auto;
-}
-
-.report1{
-    min-height: 1260px;
+    min-height: 800px;
     margin: 0 auto;
 }
 
 #signature{
     text-align: left;
-    width: 700px;
+    width: 1600px;
     margin: 0 auto;
     color: #999999;
     font-size: 18px;
-    margin-bottom: 100px;
 }
 
 
@@ -124,11 +120,46 @@ table#pdf-table{
 
 
 .page-break td{
-    height: 300px;
+    height: 500px;
     border: 1px solid #fff;
     border-bottom: 1px solid #ADACAB;
 }
 
+#pdf-header{
+    width:1600px;
+    padding-top: 30px;
+    margin: 0 auto;
+    overflow: hidden;
+}
 
+.logo{
+    height: 120px;
+    width:300px;
+    float: right;
+}
 
+.header-content{
+    color: #97080e;
+    font-weight: bold;
+    font-size: 30px;
+    float: right;
+    width: 900px;
+    height: 110px;
+    text-align: center;
+}
 
+#pdf-footer{
+    text-align: left;
+    width: 1500px;
+    padding-left: 100px;
+    padding: 50px;
+    margin: 0 auto;
+    color: #999999;
+    font-size: 22px;
+
+}
+
+.page-break-box{
+    width: 100%;
+    height: 300px;
+}
